@@ -1,0 +1,9 @@
+package simple;
+
+import cuke4duke.When;
+
+public class NorwegianSteps {
+    @When("^Jæ (.+) ålsker (.+) lændet$")
+    public void jæViElsker(String hva, String hae) {
+    }
+}
