@@ -64,6 +64,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
+            <encoding>UTF-8</encoding>
             <source>1.5</source>
             <target>1.5</target>
           </configuration>
